# nhlvisualizer

./: .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  requirements.txt  setup.cfg
src/nhlvisual/: common.py  constants.py  standings.py
src/nhlvisual/data/: standings.json
