[metadata]
name = nhlvisual
version = 0.1.0
description = Visualize NHL Stats

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.10.*
install_requires =
    dash == 2.*
    plotly == 5.*
    requests == 2.*
zip_safe = false

[options.packages.find]
where = src

[tool:pytest]
adopts = -vv